Fix for bug #8941: garbage MAX_ROWS=# from SHOW CREATE TABLE INFORMATION_SCHEMA.*   -skip the print of 'MAX_ROWS=#' for 'SHOW CRETAE TABLE' with information schema tables